<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.WeightsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_pesas"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="64dp"
        android:paddingVertical="8dp"
        android:background="#F0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                android:text="@string/expected_weight"
                android:gravity="center" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_kilograms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:ems="3"
                    android:hint="@string/kilograms"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="4dp"
                    android:text="@string/kg"
                    android:textColor="@color/design_default_color_on_secondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingRight="4dp"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_grams"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:ems="3"
                    android:hint="@string/grams"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="4dp"
                    android:text="@string/gr"
                    android:textColor="@color/design_default_color_on_secondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingRight="4dp"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_on_secondary"
                android:layout_marginHorizontal="8dp"
                android:text="@string/percentage" />

            <EditText
                android:id="@+id/et_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="3"
                android:hint="@string/percentage"
                android:inputType="number"
                tools:ignore="Autofill" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="46dp"
            android:textStyle="bold"
            android:text="@string/goal_weight"
            android:textColor="@color/design_default_color_on_secondary" />

        <TextView
            android:id="@+id/tv_goal_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="0 kg   0 gr"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="32sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>