<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/minutes"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/seconds"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/tenths"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <NumberPicker
            android:id="@+id/np_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <NumberPicker
            android:id="@+id/np_seconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dip"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="5dip" />

        <NumberPicker
            android:id="@+id/np_tenths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dip"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="5dip" />

    </LinearLayout>
</LinearLayout>