<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SetsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_pista_atletismo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="64dp"
        android:paddingVertical="8dp"
        android:background="#F0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/design_default_color_on_secondary"
            android:text="@string/expected_time" />

        <TextView
            android:id="@+id/tv_expected_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_border_bottom"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal"
            android:text="0' 0'' 0"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="32sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_on_secondary"
                android:layout_marginHorizontal="8dp"
                android:text="@string/percentage" />

            <EditText
                android:id="@+id/et_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="3"
                android:hint="@string/percentage"
                android:inputType="number"
                tools:ignore="Autofill" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="46dp"
            android:textStyle="bold"
            android:text="@string/goal_time"
            android:textColor="@color/design_default_color_on_secondary" />

        <TextView
            android:id="@+id/tv_goal_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="0' 0'' 0"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="32sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>