<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TimesFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_pista_atletismo2"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="64dp"
        android:paddingVertical="8dp"
        android:background="#F0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_on_secondary"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:text="@string/distance_run" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_distance_run"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="6"
                    android:hint="@string/distance_run"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/meter_short"
                    android:textColor="@color/design_default_color_on_secondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/design_default_color_on_secondary"
            android:text="@string/time_achieved" />

        <TextView
            android:id="@+id/tv_time_achieved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_border_bottom"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal"
            android:text="0' 0'' 0"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="32sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_on_secondary"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:text="@string/goal_distance" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_goal_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="6"
                    android:hint="@string/goal_distance"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/meter_short"
                    android:textColor="@color/design_default_color_on_secondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="46dp"
            android:textStyle="bold"
            android:text="@string/goal_time"
            android:textColor="@color/design_default_color_on_secondary" />

        <TextView
            android:id="@+id/tv_goal_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="0' 0'' 0"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="32sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_on_secondary"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/approximated_velocity" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_approximated_velocity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="0 ㎧"
            android:fontFamily="sans-serif"
            android:textSize="32sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,RtlSymmetry" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>